<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:orientation="vertical"
    android:background="@drawable/wall">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_Image"
            android:layout_width="173dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/m_createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/m_createAccount"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/m_Email2"
            android:layout_width="200dp"
            android:layout_height="51dp"
            android:hint="@string/email"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/m_Password2"
            android:layout_width="200dp"
            android:layout_height="56dp"
            android:hint="@string/password"
            android:layout_gravity="center"/>


        <Button
            android:id="@+id/m_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_gravity="center"
            android:text="@string/m_signup"/>

    </LinearLayout>
</LinearLayout>