<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ai"
    android:orientation="vertical"
    android:backgroundTint="#50FFFFFF"
    android:backgroundTintMode="src_over"
    android:weightSum="1">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_Image"
            android:layout_width="173dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="right"
            android:textColor="@color/colorRadio"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Hello World"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--# findViewById(R.id.m_Email2)-->
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/CO_Event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/CO_Image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                app:srcCompat="@drawable/co" />

            <TextView
                android:id="@+id/CO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/valuerightnow"
                android:textColor="@color/colorRadio"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/O_3_Event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/O_3_Image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                app:srcCompat="@drawable/o3" />

            <TextView
                android:id="@+id/O_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/valuerightnow"
                android:textColor="@color/colorRadio"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/NO_2_Event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/NO_2_Image"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:gravity="center"
                app:srcCompat="@drawable/no2" />

            <TextView
                android:id="@+id/NO_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/valuerightnow"
                android:textColor="@color/colorRadio"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/SO_2_Event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/SO_2_Image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                app:srcCompat="@drawable/so2" />

            <TextView
                android:id="@+id/SO_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/valuerightnow"
                android:textColor="@color/colorRadio"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/PM_2_5_Event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/PM_2_5_Image"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:gravity="center"
                app:srcCompat="@drawable/pm25" />

            <TextView
                android:id="@+id/PM_2_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/valuerightnow"
                android:textColor="@color/colorRadio"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/PM_10_Event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/PM_10_Image"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                app:srcCompat="@drawable/pm10" />

            <TextView
                android:id="@+id/PM_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/valuerightnow"
                android:textColor="@color/colorRadio"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textAQI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text= "@string/textAQI"
                android:textColor="@color/colorRadio"
                android:textSize="50dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueAQI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/valuerightnow"
                android:textColor="@color/colorRadio"
                android:textSize="50dp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="#00B8F1DF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgLocationNO2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/red_location" />

            <TextView
                android:id="@+id/measureLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="32.46.40N/35.1.18E"
                android:textColor="@color/colorRadio"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.15"
            android:background="#00BBF1DF"
            android:gravity="start"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="start"
                android:layout_marginRight="10dp"
                android:text="@string/lastUpdate"
                android:textColor="@color/colorRadio"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginLeft="15dp"
                android:text="1/1/2018 12:00:00"
                android:textColor="@color/colorRadio"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/map"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="web"
        android:background="#DF84CFCA"
        android:clickable="true"
        android:gravity="center"
        android:text="Go to SMAP Map"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#00FFFFFF"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


    </LinearLayout>

</LinearLayout>
<!--
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="#788B91"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:gravity="left"
        android:text="C02 Reporter"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="0.2"
        android:gravity="left"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="co2"
            android:textColor="@color/icons"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/c02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="111"
            android:textColor="@color/icons"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:layout_gravity="center"
        android:gravity="left"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="TVOC"
            android:textColor="@color/icons"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvoc"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textColor="@color/icons"
            android:text="123"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:layout_gravity="center"
        android:gravity="left"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textColor="#7E8C8F"
            android:text="last update (time): "
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="right"
            />
        <TextView
            android:id="@+id/lastUpdate"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textColor="#7E8C8F"
            android:text="1/1/2018 12:00:00"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="left"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:layout_gravity="center"
        android:gravity="left"
        android:orientation="horizontal"
        android:weightSum="1">
        <Button
            android:id="@+id/map"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textColor="#7E8C8F"
            android:text="@string/map"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            />
        <Button
            android:id="@+id/report"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textColor="#7E8C8F"
            android:text="@string/report"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            />
    </LinearLayout>
</LinearLayout>
-->